fixing misalignment

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -263,6 +263,7 @@
             width: 100%;
             height: 100%;
             background-color: var(--white-03);
+            top: 0;
             left: 0;
             z-index: -1;
             border-radius: 0 4px 4px 0;
